--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -98,4 +98,7 @@
     <string name="adb_over_network_summary">Enable TCP/IP debugging over network interfaces (Wi-Fi, USB networks). This setting is reset on reboot</string>
     <string name="adb_over_network_warning">WARNING: When ADB over network is enabled, your phone is open for intrusions on all connected networks, including GSM data network!\n\nOnly use this feature when you are connected on trusted networks.\n\nDo you really want to enable this function?</string>
     <string name="adb_over_network_warning_title">Allow ADB over network?</string>
+
+    <!-- Changelog error -->
+    <string name="changelog_error">Unable to load changelog</string>
 </resources>
