--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -148,4 +148,7 @@
     <color name="dialog_background">@*android:color/background_device_default_light</color>
 
     <color name="face_intro_outline">#ffdadce0</color>
+
+    <!-- Changelog Colors -->
+    <color name="changelog_title_color">@*android:color/accent_device_default_light</color>
 </resources>
